docs: enhance README with project details, team roles, technologies, and installation instructions